--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
           <p class="text-xs text-gray-500">PNG, JPG, GIF up to 10MB</p>
         </div>
         <!-- Preview -->
-        <div id="imagePreview" class="hidden mt-4 p-2 border rounded-lg bg-gray-50">
+        <div id="imagePreview" class="hidden mt-4 p-2 border rounded-lg bg-gray-50 flex items-center">
           <img id="previewImg" class="h-20 w-20 object-cover rounded" />
           <div class="ml-3">
             <p id="previewName" class="text-sm font-medium text-gray-900"></p>
@@ -60,9 +60,9 @@
       <div id="result" class="hidden mt-6">
         <h3 class="text-lg font-medium text-gray-800 mb-2">✨ Edited Image</h3>
         <img id="resultImage" class="w-full rounded-lg border shadow-sm"/>
-        <a id="downloadBtn" class="mt-3 inline-block text-center w-full bg-green-600 hover:bg-green-700 text-white font-semibold py-2 px-4 rounded-lg transition duration-200">
+        <button id="downloadBtn" class="mt-3 w-full bg-green-600 hover:bg-green-700 text-white font-semibold py-2 px-4 rounded-lg transition duration-200">
           <i class="fas fa-download mr-2"></i> Download Image
-        </a>
+        </button>
       </div>
     </div>
   </div>
@@ -162,8 +162,24 @@
 
         if (data.edited_image_url) {
           resultImage.src = data.edited_image_url;
-          downloadBtn.href = data.edited_image_url;
           resultDiv.classList.remove("hidden");
+
+          // Fix: Download button
+          downloadBtn.onclick = () => {
+            fetch(data.edited_image_url)
+              .then(res => res.blob())
+              .then(blob => {
+                const url = URL.createObjectURL(blob);
+                const a = document.createElement("a");
+                a.href = url;
+                a.download = "kamuy-edited.png";
+                document.body.appendChild(a);
+                a.click();
+                document.body.removeChild(a);
+                URL.revokeObjectURL(url);
+              })
+              .catch(err => alert("Download failed: " + err.message));
+          };
         } else {
           alert("Error: " + (data.error || "Unknown error"));
         }
