--- a/index.html
+++ b/index.html
@@ -10,8 +10,15 @@
     .dropzone { border: 3px dashed #adb5bd; border-radius: 12px; background: #f8f9fa; }
     .dropzone:hover { border-color: #0d6efd; background: #f1f3f5; }
     .spinner { display: inline-block; width: 1em; height: 1em; border: 2px solid #f3f3f3; border-top: 2px solid #fff; border-radius: 50%; animation: spin 1s linear infinite; }
-    .style-btn { @apply px-3 py-1 text-xs font-medium rounded-full border transition-all duration-200; }
-    .style-btn:hover { @apply border-blue-500 bg-blue-50; }
+    .style-btn {
+      @apply px-3 py-1 text-xs font-medium rounded-full border transition-all duration-200 cursor-pointer;
+    }
+    .style-btn.active {
+      @apply bg-blue-600 text-white border-blue-600;
+    }
+    .style-btn:not(.active):hover {
+      @apply border-blue-500 bg-blue-50;
+    }
     @keyframes spin { 0% { transform: rotate(0deg); } 100% { transform: rotate(360deg); } }
   </style>
 </head>
@@ -52,10 +59,16 @@
       <div class="mb-6">
         <label class="block text-sm font-medium text-gray-700 mb-2">Style Presets</label>
         <div class="flex flex-wrap gap-2">
-          <button type="button" class="style-btn border-gray-300" onclick="applyStyle('anime')">🎨 Anime</button>
-          <button type="button" class="style-btn border-gray-300" onclick="applyStyle('studio ghibli')">🎬 Ghibli</button>
-          <button type="button" class="style-btn border-gray-300" onclick="applyStyle('vintage')">📻 Vintage</button>
-          <button type="button" class="style-btn border-gray-300" onclick="applyStyle('cyberpunk')">🕹️ Cyberpunk</button>
+          <button type="button" class="style-btn border-gray-300" onclick="toggleStyle(this, 'anime')">🎨 Anime</button>
+          <button type="button" class="style-btn border-gray-300" onclick="toggleStyle(this, 'studio ghibli')">🎬 Ghibli</button>
+          <button type="button" class="style-btn border-gray-300" onclick="toggleStyle(this, 'vintage')">📻 Vintage</button>
+          <button type="button" class="style-btn border-gray-300" onclick="toggleStyle(this, 'cyberpunk')">🕹️ Cyberpunk</button>
+          <button type="button" class="style-btn border-gray-300" onclick="toggleStyle(this, 'van gogh')">🖼️ Van Gogh</button>
+          <button type="button" class="style-btn border-gray-300" onclick="toggleStyle(this, 'lego')">🧱 LEGO</button>
+          <button type="button" class="style-btn border-gray-300" onclick="toggleStyle(this, 'pixel art')">🎮 Pixel</button>
+          <button type="button" class="style-btn border-gray-300" onclick="toggleStyle(this, 'sketch')">🖋️ Sketch</button>
+          <button type="button" class="style-btn border-gray-300" onclick="toggleStyle(this, 'glitchcore')">🌌 Glitch</button>
+          <button type="button" class="style-btn border-gray-300" onclick="toggleStyle(this, 'desert mirage')">🏜️ Mirage</button>
         </div>
       </div>
 
@@ -93,6 +106,9 @@
     const previewImg = document.getElementById("previewImg");
     const previewName = document.getElementById("previewName");
     const previewSize = document.getElementById("previewSize");
+
+    // Selected styles
+    const selectedStyles = new Set();
 
     // Open file picker
     dropzone.addEventListener("click", () => imageInput.click());
@@ -132,15 +148,33 @@
       reader.readAsDataURL(file);
     }
 
-    function applyStyle(style) {
+    function toggleStyle(button, style) {
+      const isActive = button.classList.contains("active");
+      if (isActive) {
+        button.classList.remove("active");
+        selectedStyles.delete(style);
+      } else {
+        button.classList.add("active");
+        selectedStyles.add(style);
+      }
+    }
+
+    function getStylePrompt() {
       const styles = {
         anime: "in anime style",
         'studio ghibli': "in Studio Ghibli style",
         vintage: "with vintage film effect",
-        cyberpunk: "with cyberpunk neon lighting"
+        cyberpunk: "with cyberpunk neon lighting",
+        'van gogh': "in the style of Van Gogh, expressive brushstrokes",
+        lego: "as a LEGO diorama, plastic texture",
+        'pixel art': "in 16-bit pixel art style",
+        sketch: "as a pencil sketch, hand-drawn lines",
+        glitchcore: "with digital glitch effects, distorted colors",
+        'desert mirage': "with desert mirage effect, heat haze"
       };
-      const current = promptInput.value.trim();
-      promptInput.value = current ? `${current}, ${styles[style]}` : styles[style];
+      return Array.from(selectedStyles)
+        .map(s => styles[s] || s)
+        .join(", ");
     }
 
     function fileToBase64(file) {
@@ -155,9 +189,10 @@
     editBtn.addEventListener("click", async () => {
       const imageFile = imageInput.files[0];
       const prompt = promptInput.value.trim();
+      const stylePrompt = getStylePrompt();
 
-      if (!imageFile || !prompt) {
-        alert("Please upload an image and enter a prompt.");
+      if (!imageFile || (!prompt && selectedStyles.size === 0)) {
+        alert("Please upload an image and enter a prompt or select a style.");
         return;
       }
 
@@ -165,6 +200,9 @@
         editBtn.classList.add("hidden");
         loading.classList.remove("hidden");
         resultDiv.classList.add("hidden");
+
+        // Combine user prompt + style prompts
+        const finalPrompt = stylePrompt ? (prompt ? `${prompt}, ${stylePrompt}` : stylePrompt) : prompt;
 
         const base64Image = await fileToBase64(imageFile);
 
@@ -175,7 +213,7 @@
             image: base64Image,
             imageName: imageFile.name,
             imageType: imageFile.type,
-            prompt: prompt
+            prompt: finalPrompt
           })
         });
 
