--- a/index.html
+++ b/index.html
@@ -19,7 +19,15 @@
     .style-btn:not(.active):hover {
       @apply border-blue-500 bg-blue-50;
     }
+    .style-grid {
+      display: grid;
+      grid-template-columns: repeat(5, 1fr);
+      gap: 0.5rem;
+    }
     @keyframes spin { 0% { transform: rotate(0deg); } 100% { transform: rotate(360deg); } }
+    @media (max-width: 640px) {
+      .style-grid { grid-template-columns: repeat(3, 1fr); }
+    }
   </style>
 </head>
 <body class="bg-gray-50 min-h-screen flex items-center justify-center p-6">
@@ -58,7 +66,7 @@
       <!-- Style Presets -->
       <div class="mb-6">
         <label class="block text-sm font-medium text-gray-700 mb-2">Style Presets</label>
-        <div class="flex flex-wrap gap-2">
+        <div class="style-grid">
           <button type="button" class="style-btn border-gray-300" onclick="toggleStyle(this, 'anime')">🎨 Anime</button>
           <button type="button" class="style-btn border-gray-300" onclick="toggleStyle(this, 'studio ghibli')">🎬 Ghibli</button>
           <button type="button" class="style-btn border-gray-300" onclick="toggleStyle(this, 'vintage')">📻 Vintage</button>
@@ -157,6 +165,7 @@
         button.classList.add("active");
         selectedStyles.add(style);
       }
+      console.log("Selected styles:", Array.from(selectedStyles)); // Debug
     }
 
     function getStylePrompt() {
@@ -201,7 +210,6 @@
         loading.classList.remove("hidden");
         resultDiv.classList.add("hidden");
 
-        // Combine user prompt + style prompts
         const finalPrompt = stylePrompt ? (prompt ? `${prompt}, ${stylePrompt}` : stylePrompt) : prompt;
 
         const base64Image = await fileToBase64(imageFile);
