--- a/index.html
+++ b/index.html
@@ -18,6 +18,12 @@
       grid-template-columns: repeat(5, 1fr);
       gap: 0.5rem;
     }
+    .share-btn {
+      @apply flex items-center justify-center gap-2 px-4 py-2 rounded-lg font-medium transition-all duration-200;
+    }
+    .share-twitter {
+      @apply bg-black hover:bg-gray-800 text-white;
+    }
     @keyframes spin { 0% { transform: rotate(0deg); } 100% { transform: rotate(360deg); } }
     @media (max-width: 640px) {
       .style-grid { grid-template-columns: repeat(3, 1fr); }
@@ -151,8 +157,18 @@
           <div class="slider-handle" id="sliderHandle"></div>
         </div>
         <p class="slider-instruction">Drag left/right to compare before/after</p>
+        
+        <!-- Download Button -->
         <button id="downloadBtn" class="mt-3 w-full bg-green-600 hover:bg-green-700 text-white font-semibold py-2 px-4 rounded-lg transition duration-200">
           <i class="fas fa-download mr-2"></i> Download Image
+        </button>
+
+        <!-- Share Button -->
+        <button id="shareBtn" class="mt-3 w-full share-btn share-twitter">
+          <svg class="w-5 h-5" fill="currentColor" viewBox="0 0 24 24">
+            <path d="M23.953 4.57a10 10 0 01-2.825.775 4.958 4.958 0 002.163-2.723c-.951.555-2.005.959-3.127 1.184a4.92 4.92 0 00-8.384 4.482C7.69 8.095 4.067 6.13 1.64 3.162a4.822 4.822 0 00-.666 2.475c0 1.71.87 3.213 2.188 4.096a4.904 4.904 0 01-2.228-.616v.06a4.923 4.923 0 003.946 4.827 4.996 4.996 0 01-2.212.085 4.937 4.937 0 004.604 3.417 9.868 9.868 0 01-6.102 2.105c-.39 0-.779-.023-1.17-.067a13.995 13.995 0 007.557 2.209c9.054 0 13.999-7.496 13.999-13.986 0-.209 0-.42-.015-.63a9.936 9.936 0 002.46-2.548l-.047-.02z"/>
+          </svg>
+          Share on X
         </button>
       </div>
     </div>
@@ -169,7 +185,7 @@
       cyberpunk: "Cyberpunk neon lights and rain effects",
       'van gogh': "Paint in Van Gogh's expressive brushstrokes",
       lego: "Recreate as a detailed LEGO diorama",
-      'pixel art': "Convert to 16-bit pixel art with dithering",
+      'pixel art': "Convert to 16-bit pixel art style",
       sketch: "Turn into a pencil sketch with cross-hatching",
       glitchcore: "Add digital glitches and RGB splits",
       'desert mirage': "Create a desert mirage with heat haze"
@@ -235,8 +251,6 @@
       let x = e.clientX - rect.left;
       
       // Clamp x to account for handle width (40px)
-      // Left edge: handle starts at 0
-      // Right edge: handle ends at container width (so left = container width - 40)
       const maxLeft = rect.width - 40;
       const clampedX = Math.max(0, Math.min(maxLeft, x));
       const percent = (clampedX / rect.width) * 100;
@@ -342,6 +356,8 @@
     const editBtn = document.getElementById("editBtn");
     const loading = document.getElementById("loading");
     const resultDiv = document.getElementById("result");
+    const downloadBtn = document.getElementById("downloadBtn");
+    const shareBtn = document.getElementById("shareBtn");
 
     editBtn.addEventListener("click", async () => {
       const imageFile = imageInput.files[0];
@@ -387,6 +403,7 @@
           sliderHandle.style.left = midPoint + 'px';
           imageOverlay.style.clipPath = 'inset(0 50% 0 0)';
 
+          // Download button
           downloadBtn.onclick = () => {
             fetch(data.edited_image_url)
               .then(res => res.blob())
@@ -402,6 +419,15 @@
               })
               .catch(err => alert("Download failed: " + err.message));
           };
+
+          // Share button
+          shareBtn.onclick = () => {
+            const tweetText = "I edited my image with @fal_ai and Kamuy! Check it out!";
+            const url = encodeURIComponent(data.edited_image_url);
+            const tweetUrl = `https://twitter.com/intent/tweet?text=${encodeURIComponent(tweetText)}&url=${url}`;
+            window.open(tweetUrl, '_blank', 'noopener,noreferrer');
+          };
+
         } else {
           alert("Error: " + (data.error || "Unknown error"));
         }
