--- a/index.html
+++ b/index.html
@@ -21,8 +21,37 @@
     .share-btn {
       @apply flex items-center justify-center gap-2 px-4 py-2 rounded-lg font-medium transition-all duration-200;
     }
-    .share-twitter {
-      @apply bg-black hover:bg-gray-800 text-white;
+    .share-twitter { @apply bg-black hover:bg-gray-800 text-white; }
+    .share-facebook { @apply bg-blue-600 hover:bg-blue-700 text-white; }
+    .share-instagram { @apply bg-gradient-to-r from-purple-600 to-orange-400 text-white; }
+    .share-telegram { @apply bg-blue-500 hover:bg-blue-600 text-white; }
+    .share-whatsapp { @apply bg-green-500 hover:bg-green-600 text-white; }
+    .modal {
+      display: none;
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background: rgba(0,0,0,0.5);
+      z-index: 50;
+      align-items: center;
+      justify-content: center;
+    }
+    .modal-content {
+      @apply bg-white rounded-2xl shadow-xl p-6 max-w-sm w-full mx-4;
+    }
+    .modal-header {
+      @apply flex justify-between items-center mb-4;
+    }
+    .modal-title {
+      @apply text-lg font-semibold text-gray-800;
+    }
+    .close-button {
+      @apply text-gray-500 hover:text-gray-700 text-2xl font-bold cursor-pointer;
+    }
+    .social-grid {
+      @apply grid grid-cols-2 gap-3;
     }
     @keyframes spin { 0% { transform: rotate(0deg); } 100% { transform: rotate(360deg); } }
     @media (max-width: 640px) {
@@ -168,7 +197,50 @@
           <svg class="w-5 h-5" fill="currentColor" viewBox="0 0 24 24">
             <path d="M23.953 4.57a10 10 0 01-2.825.775 4.958 4.958 0 002.163-2.723c-.951.555-2.005.959-3.127 1.184a4.92 4.92 0 00-8.384 4.482C7.69 8.095 4.067 6.13 1.64 3.162a4.822 4.822 0 00-.666 2.475c0 1.71.87 3.213 2.188 4.096a4.904 4.904 0 01-2.228-.616v.06a4.923 4.923 0 003.946 4.827 4.996 4.996 0 01-2.212.085 4.937 4.937 0 004.604 3.417 9.868 9.868 0 01-6.102 2.105c-.39 0-.779-.023-1.17-.067a13.995 13.995 0 007.557 2.209c9.054 0 13.999-7.496 13.999-13.986 0-.209 0-.42-.015-.63a9.936 9.936 0 002.46-2.548l-.047-.02z"/>
           </svg>
-          Share on X
+          Share
+        </button>
+      </div>
+    </div>
+  </div>
+
+  <!-- Share Modal -->
+  <div id="shareModal" class="modal">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h3 class="modal-title">Share Your Creation</h3>
+        <span id="closeModal" class="close-button">&times;</span>
+      </div>
+      <p class="text-sm text-gray-600 mb-4">Share this amazing edit made with Kamuy!</p>
+      <div class="social-grid">
+        <button onclick="shareTo('twitter')" class="share-btn share-twitter text-white text-sm">
+          <svg class="w-4 h-4" fill="currentColor" viewBox="0 0 24 24">
+            <path d="M23.953 4.57a10 10 0 01-2.825.775 4.958 4.958 0 002.163-2.723c-.951.555-2.005.959-3.127 1.184a4.92 4.92 0 00-8.384 4.482C7.69 8.095 4.067 6.13 1.64 3.162a4.822 4.822 0 00-.666 2.475c0 1.71.87 3.213 2.188 4.096a4.904 4.904 0 01-2.228-.616v.06a4.923 4.923 0 003.946 4.827 4.996 4.996 0 01-2.212.085 4.937 4.937 0 004.604 3.417 9.868 9.868 0 01-6.102 2.105c-.39 0-.779-.023-1.17-.067a13.995 13.995 0 007.557 2.209c9.054 0 13.999-7.496 13.999-13.986 0-.209 0-.42-.015-.63a9.936 9.936 0 002.46-2.548l-.047-.02z"/>
+          </svg>
+          X
+        </button>
+        <button onclick="shareTo('facebook')" class="share-btn share-facebook text-white text-sm">
+          <svg class="w-4 h-4" fill="currentColor" viewBox="0 0 24 24">
+            <path d="M24 12.073c0-6.627-5.373-12-12-12s-12 5.373-12 12c0 5.99 4.388 10.954 10.125 11.854v-8.385H7.078v-3.47h3.047V9.43c0-3.007 1.792-4.669 4.533-4.669 1.312 0 2.686.235 2.686.235v2.943H15.83c-1.491 0-1.956.925-1.956 1.874v2.25h3.328l-.532 3.47h-2.796v8.385C19.612 23.027 24 18.062 24 12.073z"/>
+          </svg>
+          Facebook
+        </button>
+        <button onclick="shareTo('instagram')" class="share-btn share-instagram text-white text-sm">
+          <svg class="w-4 h-4" fill="currentColor" viewBox="0 0 24 24">
+            <path d="M12.017 0C5.396 0 .029 5.367.029 11.987c0 6.62 5.367 11.987 11.988 11.987 6.62 0 11.987-5.367 11.987-11.987C24.014 5.367 18.647.001 12.017 0zm9.545 11.987c0 5.294-4.305 9.599-9.545 9.599s-9.599-4.305-9.599-9.599 4.305-9.599 9.599-9.599 9.545 4.305 9.545 9.599zm-15.46-3.823c-.743 0-1.347.604-1.347 1.347s.604 1.347 1.347 1.347 1.347-.604 1.347-1.347-.604-1.347-1.347-1.347zm5.432 11.661c-2.978 0-5.393-2.415-5.393-5.393 0-.9 0-3.208 1.347-4.561.546-.546 1.278-.9 2.178-.9.9 0 1.632.354 2.178.9 1.353 1.353 1.353 3.661 1.353 4.561 0 2.978-2.415 5.393-5.393 5.393zm9.85-5.432c0 2.978-2.415 5.393-5.393 5.393s-5.393-2.415-5.393-5.393 2.415-5.393 5.393-5.393 5.393 2.415 5.393 5.393z"/>
+          </svg>
+          Instagram
+        </button>
+        <button onclick="shareTo('telegram')" class="share-btn share-telegram text-white text-sm">
+          <svg class="w-4 h-4" fill="currentColor" viewBox="0 0 24 24">
+            <path d="M9.78 18.65l.28-3.49L21.6 3.93c.39-.39.59-.91.55-1.42-.04-.57-.39-1.09-.91-1.31-.23-.1-.47-.15-.72-.15-.08 0-.16.01-.24.03L3.05 7.05C1.84 7.39 1 8.43 1 9.65v.14c0 .29.11.57.3.78L13.6 23.07c.27.22.6.33.94.33.22 0 .44-.06.64-.18.22-.14.37-.36.43-.61.07-.29.01-.59-.16-.84L9.78 18.65z"/>
+          </svg>
+          Telegram
+        </button>
+        <button onclick="shareTo('whatsapp')" class="share-btn share-whatsapp text-white text-sm">
+          <svg class="w-4 h-4" fill="currentColor" viewBox="0 0 24 24">
+            <path d="M17.472 14.382c-.297-.149-1.758-.867-2.03-.967-.273-.099-.471-.148-.67.15-.198.297-.766.966-.939 1.164-.173.199-.347.223-.644.075-.297-.15-1.255-.463-2.39-1.475-.883-.788-1.48-1.761-1.653-2.059-.173-.297-.018-.458.13-.606.134-.133.298-.347.446-.52.149-.174.198-.298.298-.497.099-.198.05-.371-.025-.52-.075-.149-.668-1.607-.916-2.206-.242-.575-.487-.5-.667-.51-.173-.008-.371-.01-.57-.01-.198 0-.52.074-.792.372-.272.297-1.04 1.016-1.04 2.474 0 1.457.719 2.864 1.04 3.193.32.327 2.146 3.255 5.196 4.607.709.32 1.242.489 1.694.62.72.212 1.36.198 1.871.124.574-.082 1.758-.719 1.991-1.418.234-.698.234-1.272.16-1.771-.075-.501-.272-.94-.42-1.138z"/>
+          </svg>
+          WhatsApp
         </button>
       </div>
     </div>
@@ -283,6 +355,57 @@
       e.preventDefault();
     });
 
+    // === Share Modal ===
+    const shareBtn = document.getElementById('shareBtn');
+    const shareModal = document.getElementById('shareModal');
+    const closeModal = document.getElementById('closeModal');
+    let sharedImageUrl = '';
+
+    shareBtn.addEventListener('click', () => {
+      if (!sharedImageUrl) {
+        alert('No image to share yet!');
+        return;
+      }
+      shareModal.style.display = 'flex';
+    });
+
+    closeModal.addEventListener('click', () => {
+      shareModal.style.display = 'none';
+    });
+
+    window.addEventListener('click', (e) => {
+      if (e.target === shareModal) {
+        shareModal.style.display = 'none';
+      }
+    });
+
+    function shareTo(platform) {
+      const text = "I just edited my image with Kamuy - the AI magic is real! ✨";
+      const url = encodeURIComponent(sharedImageUrl);
+      let shareUrl = '';
+
+      switch (platform) {
+        case 'twitter':
+          shareUrl = `https://twitter.com/intent/tweet?text=${encodeURIComponent(text)}&url=${url}`;
+          break;
+        case 'facebook':
+          shareUrl = `https://www.facebook.com/sharer/sharer.php?u=${url}`;
+          break;
+        case 'instagram':
+          // Instagram doesn't support direct sharing, so we open the image
+          window.open(sharedImageUrl, '_blank');
+          return;
+        case 'telegram':
+          shareUrl = `https://t.me/share/url?url=${url}&text=${encodeURIComponent(text)}`;
+          break;
+        case 'whatsapp':
+          shareUrl = `https://api.whatsapp.com/send?text=${encodeURIComponent(text + ' ' + decodeURIComponent(url))}`;
+          break;
+      }
+
+      window.open(shareUrl, '_blank', 'noopener,noreferrer');
+    }
+
     // === Rest of the JS ===
     const dropzone = document.getElementById("dropzone");
     const imageInput = document.getElementById("imageInput");
@@ -357,7 +480,6 @@
     const loading = document.getElementById("loading");
     const resultDiv = document.getElementById("result");
     const downloadBtn = document.getElementById("downloadBtn");
-    const shareBtn = document.getElementById("shareBtn");
 
     editBtn.addEventListener("click", async () => {
       const imageFile = imageInput.files[0];
@@ -394,6 +516,7 @@
         if (data.edited_image_url) {
           beforeImage.src = URL.createObjectURL(imageFile);
           afterImage.src = data.edited_image_url;
+          sharedImageUrl = data.edited_image_url; // Store for sharing
           
           resultDiv.classList.remove("hidden");
 
@@ -403,7 +526,6 @@
           sliderHandle.style.left = midPoint + 'px';
           imageOverlay.style.clipPath = 'inset(0 50% 0 0)';
 
-          // Download button
           downloadBtn.onclick = () => {
             fetch(data.edited_image_url)
               .then(res => res.blob())
@@ -419,15 +541,6 @@
               })
               .catch(err => alert("Download failed: " + err.message));
           };
-
-          // Share button
-          shareBtn.onclick = () => {
-            const tweetText = "I edited my image with @fal_ai and Kamuy! Check it out!";
-            const url = encodeURIComponent(data.edited_image_url);
-            const tweetUrl = `https://twitter.com/intent/tweet?text=${encodeURIComponent(tweetText)}&url=${url}`;
-            window.open(tweetUrl, '_blank', 'noopener,noreferrer');
-          };
-
         } else {
           alert("Error: " + (data.error || "Unknown error"));
         }
